DuPont DevSB/src/objects/ConstructionPts__Custom_Search_Details__c.object
<CustomObject>
    <fields>
        <fullName>ConstructionPts__CP_Filter__c</fullName>
        <label>CP Filter</label>
        <referenceTo>ConstructionPts__CP_Filter__c</referenceTo>
        <relationshipLabel>Custom Search Details</relationshipLabel>
        <relationshipName>Custom_Search_Details</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Custom_Search__c</fullName>
        <label>Custom Search</label>
        <referenceTo>ConstructionPts__Custom_Search__c</referenceTo>
        <relationshipLabel>Custom Search Details</relationshipLabel>
        <relationshipName>Custom_Search_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equal to</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>ends with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>does not contain</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>less or equal</fullName>
                </value>
                <value>
                    <fullName>greater or equal</fullName>
                </value>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
                <value>
                    <fullName>includes</fullName>
                </value>
                <value>
                    <fullName>excludes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConstructionPts__Value__c</fullName>
        <description>This field would hold the filter values (comma-delimited).  If the length of the string is more than 32, 768 characters the criteria value will be written into an attachment file.</description>
        <inlineHelpText>Please enter values separated by a comma.</inlineHelpText>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Custom Search Detail</label>
    <listViews>
        <fullName>ConstructionPts__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Search Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>